2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Tests.Rules.Security.csproj: Activate makefile integration for all the
	rules projects. Remove the old mdp files as they are no longer
	needed.

2008-08-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ArrayFieldsShouldNotBeReadOnlyTest.cs,
	NativeFieldsShouldNotBeVisibleTest.cs
	StaticConstructorsShouldBePrivateTest.cs: Use newer, shorter,
	syntax for unit tests. A bit more coverage was added.

2008-08-25  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodCallWithSubsetLinkDemandTest.cs, 
	NonVirtualMethodWithInheritanceDemandTest.cs,
	SealedTypeWithInheritanceDemandTest.cs, 
	SecureGetObjectDataOverridesTest.cs, TypeExposeFieldsTest.cs,
	TypeIsNotSubsetOfMethodSecurityTest.cs, TypeLinkDemandTest.cs:
	All moved into Gendarme.Rules.Security.Cas

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* StaticConstructorsShouldBePrivateTest.cs: Fix test since Clone is 
	not complete enough for TestRunner.
	* *.cs: Add missing 'using Test.Rules.Helpers;'

2008-04-08  Sebastien Pouliot  <sebastien@ximian.com>

	* SecureGetObjectDataOverridesTest.cs: Updated to new format. Add 
	test cases where the enum/flag based syntax is used with declarative
	security.
	* Test.Rules.Security.mdp: Add reference to Test.Rules assembly.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ArrayFieldsShouldNotBeReadOnlyTest.cs: Duplicate test cases for 
	structs. Add test case for interface.
	* NativeFieldsShouldNotBeVisibleTest.cs: Add test case for interface.
	* SecureGetObjectDataOverridesTest.cs: Add test case where we inherit
	from ISerializable but do not override GetObjectData.
	* StaticConstructorsShouldBePrivateTest.cs: Add test case for 
	interface (no constructor).

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* ArrayFieldsShouldNotBeReadOnlyTest.cs
	* MethodCallWithSubsetLinkDemandTest.cs
	* NativeFieldsShouldNotBeVisibleTest.cs
	* NonVirtualMethodWithInheritanceDemandTest.cs