@@ -1,3 +1,8 @@
+2008-12-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DoNotShortCircuitCertificateCheckTest.cs: New. Unit tests for
+	DoNotShortCircuitCertificateCheckRule.
+
 2008-11-07  Alan McGovern  <amcgovern@novell.com>
 
 	* Tests.Rules.Security.csproj: Activate makefile integration for all the
